--- a/CoreAnimation/CoreAnimation/Info.plist
+++ b/CoreAnimation/CoreAnimation/Info.plist
@@ -18,8 +18,14 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>是否允许使用您的相机？</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>是否允许使用您的麦克风？</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
